--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -5,69 +5,95 @@
   box-sizing: border-box;
 }
 
+/* Navbar Section */
 .navbar {
   display: flex;
   justify-content: space-evenly;
   height: 65px;
+  padding: 10px 10px;
 }
-.non-active{
+.navbar-second {
+  width: 44%;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 20px;
 }
-/* Default Non-Active Link Style (Light Green) */
-.nav-links li a,
-.nav-links-mobile li a,
+.navbar-first {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.navbar-third {
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Default Link Style */
 .navbar-second a,
-.navbar-third a {
-  color: lightgreen;
+.navbar-third a,
+.navbar-third .contact {
+  color: #094e1f; /* Default color */
   text-decoration: none;
-  transition: 0.3s;
 }
 
-/* Active Link Style */
-.active-link {
-  background-color: rgb(63, 99, 63);
-  color: white;
-  border-radius: 5px;
-  padding: 5px 10px;
-}
-.active-link1 {
+/* Contact Section */
+.navbar-third .contact {
   display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-left: 20px;
+  padding: 3px 10px;
+}
+
+/* Active Link Style - Fix applied here */
+.navbar-second a.active-link,
+.navbar-third a.active-link,
+.nav-links-mobile a.active-link,
+.navbar-third .contact.active-link {
   background-color: rgb(63, 99, 63);
-  color: white;
-  border-radius: 5px;
-  padding: 5px 10px;
-}
-.navbar-third .non-active:hover {
-  background-color: lightgreen;
-  color: white;
-  border-radius: 5px;
-  padding: 5px 10px;
-}
-/* Hover Effect for Non-Active Links */
-.nav-links li a:hover,
-.nav-links-mobile li a:hover,
-.navbar-second a:hover,
-.navbar-third a:hover {
-  background-color: lightgreen;
-  color: white;
+  color: white !important; /* Active text color */
   border-radius: 5px;
   padding: 5px 10px;
 }
 
-/* Enquiry Button Style */
+/* Active State for Contact Section */
+.navbar-third .contact.active-link,
+.navbar-third .contact.active-link p,
+.navbar-third .contact.active-link .contact1 {
+  color: white !important; /* Active color for contact text and icon */
+}
+
+/* Additional Active Styles */
+.active-link1 {
+  background-color: rgb(63, 99, 63);
+  color: white; /* Active color */
+}
+
+.contact1 {
+  color: #094e1f; /* Default icon color */
+}
+
+.active-link2 {
+  color: white; /* Active icon color */
+  margin-right: 2px;
+  margin-top: 3px;
+}
+
+/* Enquiry Button */
 .enquiry-button {
   background: none;
   border: none;
   color: inherit;
   cursor: pointer;
-  transition: color 0.3s;
-}
-
-.enquiry-button:hover {
-  background-color: lightgreen;
-  color: white;
-  border-radius: 5px;
   padding: 5px 10px;
+  border-radius: 5px;
+}
+.cont2222 {
+  font-size: 15px;
 }
 
 /* Navbar Image Styling */
@@ -76,30 +102,14 @@
   height: 50px;
   object-fit: contain;
 }
-
-.navbar-second, .navbar-third, .navbar-first {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-evenly;
+.nav-links {
+  display: none;
 }
-
-/* Contact Us Section Styling */
-.navbar-third > div {
-  border-radius: 20px;
-  border: 1px solid #094e1f;
-  display: flex;
-  margin-left: 20px;
+.active-link24{
+  color: #fff;
 }
-
-.no-decoration {
-  color: #094e1f;
-  text-decoration: none;
-  font-size: 13px;
-}
-.non-about{
-  margin-left: 30px;
-  margin-right: 30px;
+.active-link4{
+  color: white;
 }
 /* Mobile View Styling */
 @media (max-width: 768px) {
@@ -111,13 +121,12 @@
     padding-right: 20px;
   }
 
-  .navbar1 .logo {
+  .logo {
     width: 80%;
-    height: 100px;
     padding-left: 20px;
   }
 
-  .logo .nav-imag {
+  .logo .nav-img {
     width: 100%;
     height: 100px;
     object-fit: contain;
@@ -132,18 +141,22 @@
     width: 100%;
     height: 100vh;
     background-color: #094e1f;
-    gap: 30px;
     padding-top: 50px;
     list-style: none;
     text-align: center;
+    row-gap: 20px;
     z-index: 100;
   }
 
   .nav-links-mobile a {
+    text-decoration: none;
     color: lightgreen;
     font-size: 22px;
   }
-
+  .enquiry-button {
+    font-size: 22px;
+   color:  lightgreen;
+  }
   .hamburger {
     display: block;
     cursor: pointer;
