--- a/src/Style/HeaderCara.css
+++ b/src/Style/HeaderCara.css
@@ -123,7 +123,13 @@
       max-height: 550px;
       object-fit: cover;
     }
-  
+    .carousel-image112 {
+      width: 100%;
+   
+      height: 500px;
+      object-fit: cover;
+      opacity: 0.7; /* Only affects the image */
+    }
     .carousel-caption112 {
       padding: 10px 20px;
     }
