--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -9,39 +9,128 @@
 .navbar {
   display: flex;
   justify-content: space-evenly;
-  height: 65px;
+  /* height: 65px; */
   padding: 10px 10px;
+  width: 90%;
+  margin: auto;
+  gap: 60px;
 }
+
 .navbar-second {
-  width: 44%;
+  display: block;
+  width: 52%;
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: 20px;
+}
+.contact-detail {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid #a00000;
+  padding: 10px 0px;
+  width: 100% !important;
+  font-family: "Archivo", Sans-serif;
+  justify-content: center;
+}
+.call {
+  border-width: 1px;
+  line-height: 1.2;
+  border-right: 1px solid;
+  font-weight: 600;
+  font-size: 15px;
+  padding-right: 10px;
+  color: #1b1b1b;
+  cursor: pointer;
+}
+.number {
+  font-weight: 500;
+  font-size: 15px;
+  color: #1b1b1b;
+}
+
+.contact {
+  border: none;
+  padding-left: 10px;
+  font-weight: 600;
+  font-size: 15px;
+  color: #1b1b1b;
+  cursor: pointer;
+}
+.call-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.fa-phone {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  background-color: #a00000;
+  justify-content: center;
+  border-radius: 4px;
+  color: white;
+  font-size: 12px;
+}
+.link-container {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  padding-bottom: 20px;
+}
+.link-container p {
+  margin-right: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  width: 100%;
+  height: 12px;
+  border-right: 1px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.link-container :last-child p {
+  border: none;
+}
+.contact-link {
+  margin-left: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  font-family: sans-serif;
 }
 .navbar-first {
   width: 25%;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
-.navbar-third {
-  width: 30%;
+.second-logo {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: -10px;
+}
+.second-logo img {
+  width: 50%;
+  height: 50%;
+}
+.navbar-third-sec {
+  width: 20%;
+  /* display: flex;
+  align-items: start;
+  justify-content: center; */
 }
 
 /* Default Link Style */
 .navbar-second a,
 .navbar-third a,
-.navbar-third .contact {
-  color: #094e1f; /* Default color */
+.navbar-third-sec .contact {
+  color: black; /* Default color */
   text-decoration: none;
 }
 
 /* Contact Section */
-.navbar-third .contact {
+.navbar-third-sec.contact {
   display: flex;
   align-items: center;
   gap: 5px;
@@ -51,19 +140,18 @@
 
 /* Active Link Style - Fix applied here */
 .navbar-second a.active-link,
-.navbar-third a.active-link,
+.navbar-third-sec a.active-link,
 .nav-links-mobile a.active-link,
-.navbar-third .contact.active-link {
-  background-color: rgb(63, 99, 63);
-  color: white !important; /* Active text color */
+.navbar-third-sec .contact.active-link {
+  color: #a00000 !important; /* Active text color */
   border-radius: 5px;
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
 }
 
 /* Active State for Contact Section */
-.navbar-third .contact.active-link,
-.navbar-third .contact.active-link p,
-.navbar-third .contact.active-link .contact1 {
+.navbar-third-sec .contact.active-link,
+.navbar-third-sec .contact.active-link p,
+.navbar-third-sec .contact.active-link .contact1 {
   color: white !important; /* Active color for contact text and icon */
 }
 
@@ -85,15 +173,39 @@
 
 /* Enquiry Button */
 .enquiry-button {
-  background: none;
+  width: 100%;
+  /* border: 1px solid #094e1f; */
+  outline: none;
   border: none;
-  color: inherit;
+  color: white;
+  font-weight: bold;
+  padding: 12px;
+  border-radius: 0px;
+  text-align: center;
   cursor: pointer;
-  padding: 5px 10px;
-  border-radius: 5px;
+  background-color: #d32f2f;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 .cont2222 {
   font-size: 15px;
+}
+.call-us {
+  margin-top: 10px;
+  width: 100%;
+}
+.call-us button {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a00000;
+  outline: none;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 19px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px;
 }
 
 /* Navbar Image Styling */
@@ -105,10 +217,10 @@
 .nav-links {
   display: none;
 }
-.active-link24{
+.active-link24 {
   color: #fff;
 }
-.active-link4{
+.active-link4 {
   color: white;
 }
 /* Mobile View Styling */
@@ -155,7 +267,7 @@
   }
   .enquiry-button {
     font-size: 22px;
-   color:  lightgreen;
+    color: lightgreen;
   }
   .hamburger {
     display: block;
