--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -66,7 +66,7 @@
   height: 26px;
   display: flex;
   align-items: center;
-  background-color: #a00000;
+  background-color: #094e1f;;
   justify-content: center;
   border-radius: 4px;
   color: white;
@@ -200,7 +200,7 @@
   border-radius: 0px;
   text-align: center;
   cursor: pointer;
-  background-color: #d32f2f;
+  background-color: #094e1f;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
@@ -243,6 +243,9 @@
 }
 /* Mobile View Styling */
 @media (max-width: 768px) {
+  .fa-phone{
+    background-color: #094e1f;
+  }
   .navbar-third-sec {
     width: 100%;
     /* display: flex;
@@ -294,7 +297,8 @@
   }
   .enquiry-button {
     font-size: 22px;
-    color: lightgreen;
+    color: white;
+    background-color: #094e1f;
   }
   .hamburger {
     display: block;
