--- a/src/Style/ProductAndService.css
+++ b/src/Style/ProductAndService.css
@@ -11,6 +11,23 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     margin-bottom: 10px;
   }
+  .whatsapp-container2{
+    font-size: 28px;
+    color: white;
+    margin-top: 29px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #25d366;
+    border-radius: 20%;
+    width: 40px;
+    height: 39px;
+    cursor: pointer;
+  }
+
+ 
+ 
+ 
   .product {
     width: 100%;
     display: flex;
