--- a/src/Style/ProductAndService.css
+++ b/src/Style/ProductAndService.css
@@ -12,6 +12,7 @@
     margin-bottom: 10px;
   }
   .whatsapp-container2{
+    padding: 10px;
     font-size: 28px;
     color: white;
     margin-top: 29px;
