--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -33,6 +33,8 @@
   justify-content: center;
 }
 .call {
+  display: flex;
+  column-gap: 5px;
   border-width: 1px;
   line-height: 1.2;
   border-right: 1px solid;
@@ -100,16 +102,16 @@
   font-family: sans-serif;
 }
 .navbar-first {
-  width: 25%;
+  width: 40%;
+  height: 112px;
   /* display: flex;
   align-items: center;
   justify-content: center; */
 }
 .second-logo {
   display: flex;
-  align-items: flex-end;
+  height: 130px;
   justify-content: flex-end;
-  margin-top: -10px;
 }
 .second-logo img {
   width: 50%;
