logo size increament done

--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -203,8 +203,6 @@
   text-align: center;
   cursor: pointer;
   background-color: #094e1f;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 .cont2222 {
   font-size: 15px;
@@ -299,7 +297,7 @@
   }
   .enquiry-button {
     font-size: 22px;
-    color: white;
+    color: lightgreen;
     background-color: #094e1f;
   }
   .hamburger {
