--- a/src/Style/EnquiryModal.css
+++ b/src/Style/EnquiryModal.css
@@ -12,7 +12,7 @@
   }
   
   .modal-content1 {
-    background: #094e1f;
+    background: #05456c;
     padding: 20px;
     width: 90%;
     max-width: 500px;
