--- a/src/Style/Service.css
+++ b/src/Style/Service.css
@@ -90,8 +90,8 @@
 }
 .service-h1{
  text-align:center;
- color:#094e1f;
- font-size: 25px;
+ color:#05456c;
+ font-size: 32px;
  margin-bottom:70px;
 }
 /* .second-content-image{
