--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -7,7 +7,7 @@
 .footer-main {
     width: 100%;
     margin-top: 30px;
-    background-color: #094e1f;
+    background-color: #05456c;
     padding: 35px 20px 0px 20px;
 }
 .product-service-div{
@@ -41,7 +41,7 @@
 /* Centering the second div */
 .footer-first-div-second {
     width: 30%;
-    margin-left: 120px;
+    margin-left: 57px;
     flex: 1;
     display: flex;
     flex-direction: column;
