--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -159,6 +159,7 @@ body {
 .product-append > div > p {
   font-size: 20px;
   font-weight: 500;
+  color:#05456c;
 }
 .product-append > div > div:hover {
   transform: scale(1.1);
@@ -183,6 +184,7 @@ body {
   align-items: center;
 }
 .welcome-serve{
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -201,8 +203,9 @@ body {
   color: transparent;
 }
 .welcome-image{
- height: 35px;
-  width: 200px;
+  margin-top: 8px;
+  height: 35px;
+  width: 265px;
 }
 .welcome-image>img{
   width: 100%;
@@ -216,7 +219,7 @@ body {
   align-items: center;
   margin-top: 7px;
   height: 50px;
-  width: 200px;
+  width: 265px;
 }
 .heading-logo>img{
   width: 100%;
