--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -26,9 +26,9 @@
 .contact-detail {
   display: flex;
   align-items: center;
-  border-bottom: 2px solid #a00000;
+ width: 53%;
   padding: 10px 0px;
-  width: 100% !important;
+  /* width: 100% !important; */
   font-family: "Archivo", Sans-serif;
   justify-content: center;
 }
@@ -41,13 +41,13 @@
   font-weight: 600;
   font-size: 15px;
   padding-right: 10px;
-  color: #1b1b1b;
+  color: #04476e;
   cursor: pointer;
 }
 .number {
   font-weight: 500;
   font-size: 15px;
-  color: #1b1b1b;
+  color: #04476e;
 }
 
 .contact {
@@ -68,7 +68,7 @@
   height: 26px;
   display: flex;
   align-items: center;
-  background-color: #094e1f;;
+  background-color: #cb3b42;;
   justify-content: center;
   border-radius: 4px;
   color: white;
@@ -104,9 +104,14 @@
 .navbar-first {
   width: 40%;
   height: 112px;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
+  display: flex;
+  justify-content: center;
+}
+.bosh-navbar{
+color: #e71e24;
+font-weight: 600;
+text-align: center;
+font-size: 24px;
 }
 .second-logo {
   display: flex;
@@ -202,7 +207,7 @@
   border-radius: 0px;
   text-align: center;
   cursor: pointer;
-  background-color: #094e1f;
+  background-color: #05456c;
 }
 .enquiry-button1 {
   width: 100%;
@@ -256,8 +261,23 @@
 }
 /* Mobile View Styling */
 @media (max-width: 768px) {
+  .second-logo {
+    display: flex;
+    height: 77px;
+    justify-content: center;
+  }
+  .second-logo img {
+    width: 50%;
+    height: 100%;
+  }
+  .bosh-navbar{
+    color: #e71e24;
+    font-weight: 600;
+    text-align: center;
+    font-size: 20px;
+    }
   .fa-phone{
-    background-color: #094e1f;
+    background-color: #05456c;
   }
   .navbar-third-sec {
     width: 100%;
@@ -295,7 +315,7 @@
     right: 0;
     width: 100%;
     height: 100vh;
-    background-color: #094e1f;
+    background-color: #05456c;
     padding-top: 50px;
     list-style: none;
     text-align: center;
@@ -305,22 +325,22 @@
 
   .nav-links-mobile a {
     text-decoration: none;
-    color: lightgreen;
+    color: #ffff;
     font-size: 22px;
   }
   .enquiry-button {
     font-size: 22px;
-    color: lightgreen;
-    background-color: #094e1f;
+    color: white;
+    background-color: #05456c;
   }
   .enquiry-button1 {
     font-size: 22px;
     color: #ffff;
-    background-color: #094e1f;
+    background-color: #05456c;
   }
   .hamburger {
     display: block;
     cursor: pointer;
-    color: #094e1f;
+    color: #05456c;
   }
 }
