--- a/src/Style/ProductDetails.css
+++ b/src/Style/ProductDetails.css
@@ -20,10 +20,11 @@ body {
 /* Heading */
 .product-details-heading {
   text-align: center;
-  color: #064c1b;
+  color: #05456c;
   font-size: 26px;
 }
 .contact-container1{
+  background-color: #05456c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,6 +53,7 @@ body {
 }
 
 .vertical-text {
+  color: #05456c;
   writing-mode: vertical-rl; /* Rotate the text vertically */
   transform: rotate(180deg); /* Optional: to make it read top to bottom */
   font-size: 30px; /* Adjust font size as needed */
@@ -87,7 +89,7 @@ body {
 }
 .first-h31 {
   font-size: 20px;
-  color: #064c1b;
+  color: #05456c;
   text-align: center;
   font-weight: 700;
 }
