--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -6,7 +6,7 @@
 }
 
 /* Navbar Section */
-.navbar {
+.navbar4 {
   display: flex;
   justify-content: space-evenly;
   /* height: 65px; */
@@ -64,16 +64,16 @@
   gap: 10px;
 }
 .fa-phone {
-  width: 24px;
-  height: 26px;
+  width: 27px;
+  height: 29px;
   display: flex;
   align-items: center;
-  background-color: #cb3b42;;
+  background-color: #cb3b42;
   justify-content: center;
   border-radius: 4px;
   color: white;
-  font-size: 12px;
-  margin-top: -6px;
+  font-size: 15px;
+  margin-top: -30px;
 }
 .link-container {
   display: flex;
@@ -174,6 +174,7 @@ font-size: 24px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow for better visibility */
  /* Ensure it stays above other elements */
   cursor: pointer; /* Show pointer cursor on hover */
+  margin-top: -27px;
 }
 .whatsapp-container1 > i {
   color: white; /* Icon color */
@@ -261,6 +262,9 @@ font-size: 24px;
 }
 /* Mobile View Styling */
 @media (max-width: 768px) {
+  .fa-phone {
+   margin-top: 0px;
+  }
   .second-logo {
     display: flex;
     height: 77px;
