--- a/src/Style/AboutUs.css
+++ b/src/Style/AboutUs.css
@@ -153,7 +153,7 @@
     font-weight: bolder;
     margin-top: 10px;
     cursor: pointer;
-    color: #094e1f;
+    color: #05456c;
     background-color: white;
 }
 .mobile-test1{
