--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -136,7 +136,9 @@ font-size: 24px;
   color: black; /* Default color */
   text-decoration: none;
 }
-
+.loc-div{
+  margin-top: -16px;
+}
 /* Contact Section */
 .navbar-third-sec.contact {
   display: flex;
