--- a/src/Style/Cf.css
+++ b/src/Style/Cf.css
@@ -105,7 +105,7 @@
 
 .second-cont-div h2 {
   font-size: 20px;
-  color: #064c1b;
+  color: #05456c;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -142,7 +142,7 @@
 }
 
 .second-cont-div input[type="submit"] {
-  background-color: #064c1b;
+  background-color: #05456c;
   color: white;
   border: none;
   padding: 12px;
