--- a/src/Style/ProductAndService.css
+++ b/src/Style/ProductAndService.css
@@ -52,7 +52,7 @@
   }
   .productContent > h1 {
     font-size: 21px;
-    color: #064c1b;
+    color: #05456c;
   }
   .productContent > p {
     line-height: 22px;
