--- a/src/Style/AboutUs.css
+++ b/src/Style/AboutUs.css
@@ -22,7 +22,7 @@
     font-weight: 560;
     line-height: 39px;
     text-align: center;
-    color: #064c1b;
+    color: #05456c;
     margin-bottom: 16px;
 }
 
@@ -68,7 +68,7 @@
    }
 .first-h2{
  font-size: 16px;
- color: #064c1b;
+ color: #05456c;
  margin-bottom: 10px;
  text-align: center;
 }
@@ -108,7 +108,7 @@
 }
 .first-h3{
     font-size: 14px;
- color: #064c1b;
+ color: #05456c;
  text-align: center;
 }
 .first-third-section{
