--- a/src/Style/Faqd.css
+++ b/src/Style/Faqd.css
@@ -3,7 +3,7 @@
     font-weight: 560;
     line-height: 39px;
     text-align: center;
-    color: #064c1b;
+    color: #05456c;
     margin-bottom: 16px;
 }
 .fa-first-cont{
