--- a/src/Style/Privacy.css
+++ b/src/Style/Privacy.css
@@ -23,7 +23,7 @@
     font-size: 26px;
     font-weight: 560;
     text-align: center;
-    color: #064c1b;
+    color: #05456c;
 }
 .first-section>div:nth-child(2){
     margin-top: 20px;
