--- a/src/Style/HeaderCara.css
+++ b/src/Style/HeaderCara.css
@@ -38,12 +38,12 @@
   bottom: 0;
   width: 100%;
   padding: 20px 40px;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(216 210 210 / 50%);
   color: white;
   text-align: left;
   opacity: 0;
   transform: translateY(100%);
-  transition: opacity 0.5s ease, transform 0.5s ease;
+  transition: opacity 0.5s ease 0.5s, transform 0.5s ease 0.5s;
 }
 
 .carousel-item.active .carousel-caption112 {
@@ -73,6 +73,9 @@
 }
 
 @media (max-width:768px){
+  .caraousel-h1{
+    font-size: 18px;
+  }
   .d-block {
     height: 400px;
   }
