--- a/src/Style/AboutUs.css
+++ b/src/Style/AboutUs.css
@@ -17,6 +17,18 @@
     margin: auto;
     text-align: center;  
 }
+.image33{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.image33>img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .first-section>h1{
     font-size: 26px;
     font-weight: 560;
@@ -136,6 +148,18 @@
     background-color: #094e1f;  
     width: 100%;
 }
+.founder-section{
+    width: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.first-first-aboutus1{
+    color: white;
+    width: 20%;
+
+}
 .aboutus-border{
     width: 100%;
     border: 1px solid black;
@@ -165,6 +189,21 @@
     object-fit: cover;
 }
 @media (max-width:768px){
+    .founder-section{
+        width: 100%;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .first-first-aboutus1{
+        text-align: center;
+        width: 84%;
+    }
+    .image33{
+        width: 90%;
+    }
     .description-aboutus{
         border-radius: 20px;
         width: 100%;
