--- a/src/Style/HeaderCara.css
+++ b/src/Style/HeaderCara.css
@@ -1,5 +1,3 @@
-/* CarouselComponent.css */
-
 .custom-carousel {
   position: relative;
   overflow: hidden;
@@ -71,7 +69,12 @@
     opacity: 1;
   }
 }
-
+.caraousel-h1{
+  font-size: 30px;
+}
+.span-text11{
+  font-size: 26px;
+}
 @media (max-width:768px){
   .caraousel-h1{
     font-size: 18px;
