--- a/src/Style/AboutUs.css
+++ b/src/Style/AboutUs.css
@@ -18,11 +18,20 @@
     text-align: center;  
 }
 .image33{
-    width: 30%;
+    width: 50%;
     display: flex;
+    height: 400px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.ul-about{
+    margin-left:16px;
+    margin-top:12px;
+}
+.fount-text{
+    width: 30%;
+    
 }
 .image33>img{
     width: 100%;
@@ -46,7 +55,10 @@
     width: 100%;
     display: flex;
    margin-top: 40px;
-   column-gap: 10px;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 40px;
+   column-gap: 30px;
    line-height: 1.5;
  
 }
@@ -89,8 +101,12 @@
    width: 100%;
    display: flex;
    margin: auto;
+   justify-content: space-between;
+   align-items: center;
   column-gap: 30px;
   line-height: 1.5;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .first-second-aboutus{
@@ -149,11 +165,13 @@
     width: 100%;
 }
 .founder-section{
-    width: 100%;
-    background-color: black;
+    width: 80%;
+    margin: auto;
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
 .first-first-aboutus1{
     color: white;
@@ -179,6 +197,15 @@
     color: #05456c;
     background-color: white;
 }
+.welcome-image12{
+    width: 50%;
+    padding-top: 7px;
+}
+.welcome-image12>img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .mobile-test1{
     width: 100%;
     margin: auto;
@@ -189,9 +216,16 @@
     object-fit: cover;
 }
 @media (max-width:768px){
+    .welcome-image12 {
+   width: 100%;
+    }
+    .fount-text {
+        margin-top: 20px;
+        text-align: center;
+        width: 74%;
+    }
     .founder-section{
         width: 100%;
-        background-color: black;
         display: flex;
         flex-direction: column;
         justify-content: center;
